feat: 新增谷歌登录

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta name="referrer" content="never">
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>步步为营</title>
-  </head>
-  <body>
-    <div id="app" style="display: block; height: 100vh"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+</head>
+<body>
+<div id="app" style="display: block; height: 100vh"></div>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
